crates/wac-parser/tests/resolution/fail/missing-type-in-use.wac
package test:comp;

interface a {

}

interface b {
    use a.{x};
}